--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-email": "^1.1.1",
     "fast-csv": "^2.3.0",
     "handlebars": "^3.0.3",
+    "lodash": "^4.17.21",
     "multiparty": "^4.1.2",
     "nodejs-fs-utils": "^1.0.26",
     "nodemailer": "^2.6.4",
